# smoxel

./: .gitignore  Cargo.toml  README.md  flake.nix  workspace.kdl
.cargo/: config.toml
assets/shaders/: chunk.wgsl  clear.wgsl  custom_material.wgsl  transient_world.wgsl  voxelization.wgsl  voxelize.wgsl
src/: chunk.rs  main.rs  player.rs  render.rs  vox.rs
