[package]
name = "smoxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bevy = { version="0.12.1", features = [ "file_watcher" ] }
bevy-inspector-egui = { version ="0.21.0", optional = true }
block-mesh = "0.2.0"
dot_vox = "5.1.1"
futures-lite = "2.1.0"
noise = "0.8.2"
rand = "0.8.5"

[features]
dev = [ "bevy-inspector-egui" ]
default = [ "dev" ]
# default = [ ]
